# autoauth0

./: .gitignore  README.md  pyproject.toml  requirements.txt
auto_auth0_tests/auth0-python-web-app/: auth0_integration.md
auto_auth0_tests/python-web-app/01-Login/: requirements.txt  server.py
auto_auth0_tests/python-web-app/01-Login/templates/: home.html
db/: chroma.sqlite3
src/autoauth0/: crew.py  main.py
src/autoauth0/agents/: codebase_analysis_agent.py
src/autoauth0/config/: agents.yaml  tasks.yaml
src/autoauth0/tasks/: codebase_analysis_tasks.py
